# pediperi

./: CMakeLists.txt  README.md  capture1.avi  main.cpp
example/: CMakeCache.txt  CMakeLists.txt  apriltags_core.cpp  apriltags_demo.cpp
pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
pod-build/example/: Makefile  cmake_install.cmake
pod-build/lib/pkgconfig/: apriltags.pc
src/: TagDetector.cc
